--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 		<h2>ВЫ МУЖЧИНА ИЛИ ЖЕНЩИНА?</h2>
 		<p> <a href="#man_what_age"   data-role="button" data-inline="true">Мужчина</a> <a href="#woman_what_age" data-role="button" data-inline="true">Женщина</a> </p>-->
 		<p> <a href="#man_what_age"   data-role="button" data-inline="true" data-theme="b">Как стать мужиком</a></p>
+
+		<p><a href="about.html">Кто такой Денис Борисов?</a></p>
 	</section>
 </div>
 
@@ -67,7 +69,6 @@
 	</header>
 	<section data-role="content">
 		woman test
-		test tupo
 		<p><img src="images/arno.jpg"></p>
 	</section>
 </div>
