--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <meta charset="utf-8">
 <title>Подполье</title>
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-<link type="text/css" rel="stylesheet" media="screen" href="//code.jquery.com/mobile/1.4.0/jquery.mobile-1.4.0.min.css">
-<link type="text/css" rel="stylesheet" media="screen" href="custom.css">
-<script type="text/javascript" src="//code.jquery.com/jquery-1.10.2.min.js"></script>
-<script type="text/javascript" src="//code.jquery.com/mobile/1.4.0/jquery.mobile-1.4.0.min.js"></script>
+<link type="text/css" rel="stylesheet" media="screen" href="assets/jquery.mobile-1.4.0.min.css">
+<link type="text/css" rel="stylesheet" media="screen" href="assets/custom.css">
+<script type="text/javascript" src="assets/jquery-1.10.2.min.js"></script>
+<script type="text/javascript" src="assets/jquery.mobile-1.4.0.min.js"></script>
 </head>
 <body>
 <div data-role="page" id="home">
