--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	</header>
 	<section data-role="content">
 		<h1>Как выбрать для себя тренировочную программу?</h1>
+
 		<p>Привет, «подполье». Денис Борисов обещал вам необычную книжонцию которая добавит больше понимания в ваши головы. Что ж... раз обещал, значит нужно выполнять. Представляю вашему вниманию один простенький алгоритм подбора тренировочной программы для новичков.</p>
 		<p><img src="images/denis.jpg" alt="Денис Борисов"></p>
 		<p>Не судите строго, потому что цель сего труда была вовсе не в том, чтоб объяснить все возможные варианты тренировки или в том, чтоб, боже упаси, выбрать САМУЮ САМУЮ лучшую. Так не бывает в принципе.</p>
@@ -26,14 +27,19 @@
 		<p>Когда я говорю <strong>ПРАВИЛЬНОЙ</strong>, я имею введу такую тренировочную программу которая будет <strong>оптимальной именно для вас</strong>. Т.е. такой программы, которая приведет к максимально быстрому результату.</p>
 		<p>Все люди разные. Это является причиной огромного разнообразия тренировочных программ для занятий в тренажерном зале. Выбор оптимальной - задача не из простых, потому что нужно учитывать огромное количество параметров, разобраться в которых порой и опытному спортсмену не под силу. Поэтому я решил вам облегчить подобную задачу по максимуму.</p>
 		<p>С помощью этого приложения вы сможете подобрать эффективную программу именно для себя. Составляя алгоритм выбора, я учитывал прежде всего такие параметры, как <strong>ПОЛ, ВОЗРАСТ, ТРЕНИРОВАННОСТЬ и ГЕНЕТИКУ</strong>, потому что на мой взгляд, это основные четыре параметра, которыми нужно руководствоваться при выборе индивидуальной тренировочной программы.</p>
-		<p>Это первая версия программы, поэтому подбор программы только для мужчин.</p>
+		<!--<p>Это первая версия программы, поэтому подбор программы только для мужчин.</p>-->
 		<p>Итак. Вы готовы? Тогда поехали!</p>
-		<!--<p>Первый вопрос звучит так: </p>
+		<p>Первый вопрос звучит так: </p>
 		<h2>ВЫ МУЖЧИНА ИЛИ ЖЕНЩИНА?</h2>
-		<p> <a href="#man_what_age"   data-role="button" data-inline="true">Мужчина</a> <a href="#woman_what_age" data-role="button" data-inline="true">Женщина</a> </p>-->
-		<p> <a href="#man_what_age"   data-role="button" data-inline="true" data-theme="b">Как стать мужиком</a></p>
+		<p> <a href="#man_what_age"   data-role="button" data-inline="true" style="color: blue;">Мужчина</a>
+			<a href="#woman_what_age" data-role="button" data-inline="true" style="color: deeppink;">Женщина</a> </p>
+		<p><a href="about.html" data-role="button">Кто такой Денис Борисов?</a></p>
+		<p><a href="market://details?id=by.e95.boris_train" data-role="button">ОЦЕНИТЬ ПРИЛОЖЕНИЕ</a>
+		<!--<p><a href="market://details?id=by.e95.boris_train" data-role="button">Скачать версию без рекламы</a>-->
 
-		<p><a href="about.html">Кто такой Денис Борисов?</a></p>
+
+
+
 	</section>
 </div>
 
@@ -68,8 +74,35 @@
 		<h1>шаг 2/5</h1>
 	</header>
 	<section data-role="content">
-		woman test
-		<p><img src="images/arno.jpg"></p>
+		<h1>Итак, вы представительница прекрасной половины человечества...</h1>
+		<p>Это здорово сокращает поиск подходящей для вас программы.
+		И хотя многие мужчины уверенны, что лучше есего за своими фигурами
+		следят шахматистки, я искренне надеюсь, что вы - исключение из
+		правил.</p>
+		<p>Женская физиология очень сильно отличается от мужской. Главное
+			отличие касается системы накопления питательных веществ (в женском
+			теле эти процессы идут более интенсивно) и системы максимально
+			возможного мышечного сокращения (женщина в силу меньшего количества
+			«агрессивных» гормонов) не может тренироваться жестко в условиях
+			мышечного утомления. Эти знания здорово облегчают нам подбор верной
+			программы для вашей тренировки.</p>
+		<p>Следующий очень важный параметр, который позволит подобрать
+			подходящую именно вам тренировочную программу - это <b>ВОЗРАСТ</b>.
+			Мужчины взрослеют к 60 годам, а женщины к 15. Ну а если серьезно, то
+			юная девочка не должна тренироваться так, как взрослая женщина, в силу
+			физиологических особенностей.</p>
+		<p>Поэтому мой следующий и самый не скромный вопрос:</p>
+		<h2>СКОЛЬКО ВАМ ЛЕТ?</h2>
+		<div data-role="controlgroup" data-type="horizontal">
+			<a href="woman15_what_train.html" data-role="button">15-19</a>
+			<a href="woman20_what_train.html" data-role="button">20-29</a>
+			<a href="woman30_what_train.html" data-role="button">30-35</a>
+			<a href="woman36_what_train.html" data-role="button">36-44</a>
+			<a href="woman44_what_train.html" data-role="button">44+</a>
+		</div>
+
+
+		<p><img src="images/woman.jpg"></p>
 	</section>
 </div>
 </body>
