--- a/man29_what_adv_gen.html
+++ b/man29_what_adv_gen.html
@@ -32,7 +32,8 @@
 		<a href="man29_adv_basic.html" data-role="button" data-transition="flip">Да, могу</a>
 		<a href="man29_adv_adv.html" data-role="button" data-transition="flip">Нет, пальцев не хватило</a> </div>
 	<p><em><strong>Примечание</strong>: 90% молодых людей могут обхватить свое запястье в подобное кольцо. Это абсолютно нормально и говорит, что вы обладаете средним телосложением. К слову, большинство успешных чемпионов в бодибилдинге обладали именно таким телосложением как и вы. Если же вы не смогли обхватить пальцами свое запястье, то это значит что ваши кости уже в с столь юном возрасте очень прочные и вы обладаете генетической предрасположенностью к силовым видам спорта</em></p>
-</section>
+<p><img src="images/man_types.jpg"></p>
+	</section>
     
 </body>
 </html>
