--- a/man11_what_basic_gen.html
+++ b/man11_what_basic_gen.html
@@ -26,6 +26,7 @@
 			<a href="man11_basic_adv.html" data-role="button" data-inline="true" data-transition="flip">Нет, пальцев не хватило</a> 
 		</p>
 		<p><em><strong>Примечание</strong>: 90% молодых людей могут обхватить свое запястье в подобное кольцо. Это абсолютно нормально и говорит, что вы обладаете средним телосложением. К слову, большинство успешных чемпионов в бодибилдинге обладали именно таким телосложением как и вы. Если же вы не смогли обхватить пальцами свое запястье, то это значит что ваши кости уже в с столь юном возрасте очень прочные и вы обладаете генетической предрасположенностью к силовым видам спорта</em></p>
+	<p><img src="images/man_types.jpg" alt=""></p>
 	</section>
 </div>
 
